@@ -7,6 +7,17 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.8 (????-??-??)
 --------------------------
 
+- Classes whose name starts with and underscore are no longer imported when
+  using ``objc.loadBundle``. They are still available using 
+  ``objc.lookUpClass``.
+
+  Methods whose name starts with an underscore are no longer visible when 
+  introspecting using ``dir()``, but can still be called. 
+
+  These changes were done to make introspection slightly more user-friendly:
+  anything that is now hidden from introspection is most likely not part of
+  a public API.
+
 - Most of the libffi testsuite is now run using a module that emulates 
   dejagnu.
 
